--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@ html{
   width: 100vw;
   height: 100vh;
   font-family:Poppins;
-  font-size:1vw;
   overflow-x:hidden;
+  overflow-y:scroll;
 }
 body{
   width:100%;
   height:100%;
+  overflow-x:hidden;
 }
 #root{
   width:100%;
@@ -19,15 +20,21 @@ body{
   display: flex;
   flex-direction: column;
 }
+#Nav_Container{
+width:100%;
+display:flex;
+justify-content:space-between;
+}
 nav{
   position:fixed;
   background-color: #fff;
   width:100%;
   display:flex;
-  justify-content: space-between;
+  flex-direction:column;
   padding: 1rem 0;
   box-shadow:0 0.6rem 0.6rem 0 rgba(9,5,29,.171);
-  z-index:2;
+  z-index:4;
+  height:fit-content;
 }
 #Company_Name{
   font-size:1.8rem;
@@ -46,13 +53,23 @@ margin-right:0.3rem;
   gap:2rem;
   margin-right:7rem;
 }
-.Navigation_Buttons{
+.Navigation_Buttons,.Hidden_Buttons{
   border:none;
   background:transparent;
   font-size:1.2rem;
   font-weight:600;
   outline:none;
   color:#000;
+}
+#Hidden_Nav{
+width:100%;
+display:flex;
+flex-direction: column;
+align-items:center;
+display:none;
+}
+.Hidden_Buttons{
+padding: 1rem 0;
 }
 #Cart_Icon{
 position: relative;
@@ -79,7 +96,7 @@ height:2rem;
 .carousel{
 width:100%;
 padding-top:6rem;
-height:30rem;
+height:fit-content;
 position: relative;
 background-color:#f6f9fc;
 display: flex;
@@ -101,8 +118,10 @@ display: flex;
   font-size:3rem;
   margin: 5rem 0 2rem;
   line-height:5rem;
+  width:100%;
 }
 .Slide_Data p{
+width:100%;
 margin:2rem 0;
 font-size:1.6rem;
 line-height:2.4rem;
@@ -117,6 +136,7 @@ width:100%;
 background-color:#fff;
 padding:3rem 0;
 display:flex;
+flex-wrap:wrap;
 justify-content: center;
 }
 #AdditionalInfo img{
@@ -241,6 +261,7 @@ footer{
   background-color:#0f3460;
   color: #fff;
   display:flex;
+  flex-wrap:wrap;
   justify-content:space-evenly;
 }
 #footer_p1,#footer_p2,#footer_p3,#footer_p4{
@@ -401,16 +422,18 @@ width:1.5rem;
 height:1.5rem;
 margin-right:0.5rem;
 }
+#Categories_Container{
+position: relative;
+}
 #List_of_Category{
   background:#fff;
   list-style-type:none;
   margin:0.5rem 0;
   box-sizing:border-box;
   width:28rem;
-  position: absolute;
-  top:26rem;
-  left:7rem;
-  z-index:1;
+  position:absolute;
+  top:0%;
+  left:7%;
   display:none;
   border-radius:0.2rem;
   color: #0f3460;
@@ -562,7 +585,6 @@ margin-bottom:1rem;
 }
 #Price_Item{
 font-size:2rem;
-margin-right:6rem;
 }
 #Product_Category{
 margin-top:0.7rem;
@@ -593,7 +615,7 @@ align-items:center;
 }
 #Description_Rating_Container{
 width:100%;
-padding: 4rem 0;
+margin: 4rem 0;
 }
 #Description_Rating{
 width:100%;
@@ -616,19 +638,6 @@ margin-left:6rem;
 height:7.5rem;
 background-color: #fff;
 width:90%;
-font-size:1.2rem;
-}
-#Product_Reviews{
-width:100%;
-height:5rem;
-position: absolute;
-z-index:-1;
-top:62.5rem;
-background-color: #fff;
-}
-#Product_Reviews p{
-margin-left:6rem;
-margin-top:1rem;
 font-size:1.2rem;
 }
 #Products_Like{
@@ -697,4 +706,16 @@ align-items:center;
 }
 #NotFound_Button:hover {
   background-color: #0077b6;
+}
+#Error_Container{
+  width:100%;
+  height:100rem;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Arial',sans-serif;
+  font-size:4rem;
+  margin:10rem 0;
+  color: #e63946;
+  flex-direction: column;
 }
